start of layout for commitment cards app

--- a/commitments/templates/commitments/show.html
+++ b/commitments/templates/commitments/show.html
@@ -3,4 +3,111 @@
 
 {% block right_content %}
     <h1>The Commitment Landing Page</h1>
+    <table border="0" cellspacing="5" cellpadding="5">
+        <tr>
+            <th></th>
+            <th class="center smaller" style="width:96px; font-weight:bold;">
+                <div style="font-size:18px; font-weight:bold;">
+                    13
+                </div>
+                Committed
+            </th>
+            <th class="center smaller" style="width:96px; font-weight:bold;">
+                <div style="font-size:18px; font-weight:bold;">
+                    13
+                </div>
+                Completed
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <span class="ui-icon ui-icon-triangle-1-e"></span>
+    	        <a href="#" class="commit_action">Eliminate Vampire Power</a>
+    	        <ul class="commit_user_list hidden">
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        		</ul>
+    	    </td>
+    	    <td class="top center">
+    	        1
+    	    </td>
+    	    <td class="top center">
+    	        2
+    	    </td>
+        </tr>
+        <tr>
+            <td>
+                <span class="ui-icon ui-icon-triangle-1-e"></span>
+    	        <a href="#" class="commit_action">Set your water heater to 120°F</a>
+    	        <ul class="commit_user_list hidden">
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        		</ul>
+    	    </td>
+    	    <td class="top center">
+    	        1
+    	    </td>
+    	    <td class="top center">
+    	        2
+    	    </td>
+        </tr>
+        <tr>
+            <td>
+                <span class="ui-icon ui-icon-triangle-1-e"></span>
+    	        <a href="#" class="commit_action">Have a home energy audit and retrofit</a>
+    	        <ul class="commit_user_list hidden">
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        		</ul>
+    	    </td>
+    	    <td class="top center">
+    	        1
+    	    </td>
+    	    <td class="top center">
+    	        2
+    	    </td>
+        </tr>
+        <tr>
+            <td>
+                <span class="ui-icon ui-icon-triangle-1-e"></span>
+    	        <a href="#" class="commit_action">Install a low-flow sink aerator</a>
+    	        <ul class="commit_user_list hidden">
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
+        		</ul>
+    	    </td>
+    	    <td class="top center">
+    	        1
+    	    </td>
+    	    <td class="top center">
+    	        2
+    	    </td>
+        </tr>
+    </table>
+    <div id="commit_totals">
+        
+    </div>
+    
 {% endblock %}
+
+{% block js %}page_commitments_show{% endblock %}
