--- a/static/css/style.css
+++ b/static/css/style.css
@@ -542,6 +542,12 @@ Profile Profile Profile Profile Profile Profile Profile Profile Profile Profile 
 #profile_edit_tabs #social_networks_tab .floater { float:left; margin-right:12px; }
 
 /* ---------------------------------------------------------------------------------------------------------------------
+Commitments Commitments Commitments Commitments Commitments Commitments Commitments Commitments Commitments Commitments 
+--------------------------------------------------------------------------------------------------------------------- */
+span.ui-icon {float:left;}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------
 Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
 --------------------------------------------------------------------------------------------------------------------- */
 .hidden { display: none;}
@@ -556,6 +562,7 @@ Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
 .smaller {font-size:12px;}
 .center {text-align:center;}
 .right {text-align:right;}
+.top {vertical-align: top;}
 .blog_byline {}
 .post_body li,
 #flat_page li{ list-style: disc; }
