--- a/events/templates/events/_volunteer_form.html
+++ b/events/templates/events/_volunteer_form.html
@@ -1,6 +1,6 @@
-<h4>Name: <span class="attendee_label">{{ guest.name }}</span></h4>
-<h4>Email: <span class="attendee_label">{{ guest.email }}</span></h4>
-<h4>Phone: <span class="attendee_label">{{ guest.phone }}</span></h4>
+<h4>Name: <span class="attendee_label">{{ guest.contributor.name }}</span></h4>
+<h4>Email: <span class="attendee_label">{{ guest.contributor.email }}</span></h4>
+<h4>Phone: <span class="attendee_label">{{ guest.contributor.phone }}</span></h4>
 <br />
 <form action="" method="post">
     <p>
