Commiting in progress work on commitments app.

--- a/commitments/templates/commitments/card.html
+++ b/commitments/templates/commitments/card.html
@@ -2,7 +2,12 @@
 {% block title %}My commitments on Repower at Home{% endblock %}
 
 {% block right_content %}
-    <h1>Commitment Card</h1>
+<div class="box_two_top"></div>
+<div class="box_two_middle">
+    {% include "commitments/_card.html" %}
+</div>
+<div class="box_two_bottom"></div>
+    
 {% endblock %}
 
 {% block js %}page_commitments_card{% endblock %}
