another test commit

--- a/templates/registration/register2.html
+++ b/templates/registration/register2.html
@@ -6,7 +6,7 @@
         <div class="box_three_top"></div>
         <div class="box_three_middle">
             <div id="registration_left_col">
-                <h1>Join the Challenge!!</h1>
+                <h1>Join the Challenge!</h1>
                 <p>
                     <object width="360" height="227"><param name="movie" value="https://repowerathome.com/youtube/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="360" height="227"></embed></object>
                 </p>
