added facebook register page ab test javascript code to tracking and conversion pages

--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -42,6 +42,17 @@
                                 src="http://www.googleadservices.com/pagead/conversion/1019290765/?label=Ow0dCLvK9gEQjcmE5gM&amp;guid=ON&amp;script=0"/>
                         </div>
                     </noscript>
+                    <!-- Google Website Optimizer Conversion Script -->
+                    <script type="text/javascript">
+                    if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
+                    (document.location.protocol=='https:'?'s://ssl':'://www')+
+                    '.google-analytics.com/ga.js"></sc'+'ript>')</script>
+                    <script type="text/javascript">
+                    try {
+                    var gwoTracker=_gat._getTracker("UA-11623269-2");
+                    gwoTracker._trackPageview("/1500145245/goal");
+                    }catch(err){}</script>
+                    <!-- End of Google Website Optimizer Conversion Script -->
                 {% else %}
                     {{ message|safe }} <a href="#" class="dismiss">close</a>
                 {% endif %}
