--- a/templates/registration/register2.html
+++ b/templates/registration/register2.html
@@ -80,3 +80,16 @@
     </div>
 {% endblock %}
 {% block js %}page_register{% endblock %}
+{% block extrajs %}
+<!-- Google Website Optimizer Tracking Script -->
+<script type="text/javascript">
+if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
+(document.location.protocol=='https:'?'s://ssl':'://www')+
+'.google-analytics.com/ga.js"></sc'+'ript>')</script>
+<script type="text/javascript">
+try {
+var gwoTracker=_gat._getTracker("UA-11623269-2");
+gwoTracker._trackPageview("/1500145245/test");
+}catch(err){}</script>
+<!-- End of Google Website Optimizer Tracking Script -->
+{% endblock %}
