Adding links to materials page

--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -17,9 +17,10 @@
 
         <h3>How do I host?</h3>
         <p>
-            Repower at Home’s web tools make it easy to invite guests, record RSVPs and complete follow-up. Get started
-            by <a href="http://rahstatic.s3.amazonaws.com/meeting_materials/Energy_Meeting_Guide.pdf">downloading the 
-            host guide</a>. After reading through the guide, create your event and start inviting guests.
+            Repower at Home's toolkit makes it easy to invite guests, manage RSVPs, and hold a great event. Get started
+            by <a href="http://rahstatic.s3.amazonaws.com/meeting_materials/Host%20Guide.pdf">downloading the host
+            guide</a>. You can also review other materials that will help you organize and run your event. Check out the
+            <a href="/hosting/">materials page</a>.    
         </p>
         <p class="center"><a class="button" href="{% url event-create %}" style="font-size:18px">Create an Event</a></p>
         
@@ -33,9 +34,9 @@
         <h3>Who hosts meetings?</h3>
         <p>
             <b>Anyone, from engineers to English teachers, can host a meeting</b>. You don’t need to be an energy
-            efficiency expert to host — in fact, you don’t need to have any background in the topic at all. The
-            materials will give you all the information you need to run an event and share your enthusiasm with your
-            community.
+            efficiency expert to host &ndash; in fact, you don’t need to have any background in the topic at all. The 
+            <a href="/hosting/">materials page</a> will give you all the information you need to run an event and share
+            your enthusiasm with your community.
         </p>
         <object width="432" height="268">
             <param name="movie" value="http://www.youtube.com/v/gcK06I0Jd9o&amp;hl=en_US&amp;fs=1?rel=0"></param>
