--- a/commitments/templates/commitments/_card.html
+++ b/commitments/templates/commitments/_card.html
@@ -1,1 +1,70 @@
 <h1>Commitment Card</h1>
+<form action="" method="post">
+    <table class="">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Committed</th>
+                <th>Done</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Eliminate Vampire Power</td>
+                <td></td>
+                <td>{{ field }}</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>{{ field.label }}</td>
+                <td>{{ field }}</td>
+            </tr>
+            {% for field in form %}
+                {% if field.field.action %}
+                    <tr>
+                        <td></td>
+                        <td>{{ field.label }}</td>
+                        <td>{{ field }}</td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+            {% for field in form %}
+                {% if not field.field.action %}
+                    <tr>
+                        <td></td>
+                        <td>{{ field.label }}</td>
+                        <td>{{ field }}</td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        </tbody>
+    </table>
+    <div class="form_row overset form_row_float form_row_float_left_field">
+        <label for="id_first_name">First name</label>
+        <input type="text" name="first_name" id="id_first_name" />
+    </div>
+    
+    <div class="form_row overset form_row_float">
+        <label for="id_last_name">Last name</label>
+        <input id="id_last_name" type="text" name="last_name" maxlength="30" />
+    </div>
+    <br class="clear"/>
+    <div class="form_row overset ">
+        <label for="email_register">Email</label>
+        <input type="text" id="email_register" name="email" />
+    </div>
+    <div class="form_row overset ">
+        <label for="id_phone">Phone</label>
+        <input type="text" id="id_phone" name="phone" />
+    </div>
+    <div class="form_row overset ">
+        <label for="id_zipcode">Zipcode (US residents only)</label>
+        <input id="id_zipcode" type="text" name="zipcode" maxlength="10" />
+        {# <div class="help_text"></div> #}
+    </div>
+    <div>
+        <input type="submit" value="Save and add another" />
+        <input type="submit" value="Save and close" />
+    </div>
+    {% csrf_token %}
+</form>
