replace mock data on commitments show page with real data [completed: 466]

--- a/commitments/templates/commitments/show.html
+++ b/commitments/templates/commitments/show.html
@@ -8,121 +8,58 @@
     <p>
         <a href="{% url commitments_card_create %}" class="button">Enter commitment cards</a>
     </p>
-    <table border="0" cellspacing="5" cellpadding="5">
-        <tr>
-            <th></th>
-            <th class="center smaller" style="width:70px;">
-                <div class="commit_totals">13</div>
-                Committed
-            </th>
-            <th class="center smaller" style="width:70px;">
-                <div class="commit_totals">13</div>
-                Completed
-            </th>
-        </tr>
-        <tr>
-            <td class="top">
-                <span class="ui-icon ui-icon-triangle-1-e commit_tick"></span>
-    	        <a href="#" class="commit_action" id="commit_action__1">Eliminate Vampire Power</a>
-    	        <ul class="commit_list_ul commit_list_ul_1 hidden">
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        		</ul>
-    	    </td>
-    	    <td class="top center">
-    	        <b>4</b>
-    	        <ul class="plain_list commit_list_ul_1 hidden">
-        			<li>&#10003;</li>
-        			<li>&nbsp;</li>
-        			<li>&nbsp;</li>
-        			<li>&#10003;</li>
-        			<li>&nbsp;</li>
-        			<li>&#10003;</li>
-        			<li>&#10003;</li>
-        		</ul>
-    	    </td>
-    	    <td class="top center">
-    	        <b>3</b>
-    	        <ul class="plain_list commit_list_ul_1 hidden">
-        			<li>&nbsp;</li>
-        			<li>&#10003;</li>
-        			<li>&#10003;</li>
-        			<li>&nbsp;</li>
-        			<li>&#10003;</li>
-        			<li>&nbsp;</li>
-        			<li>&nbsp;</li>
-        		</ul>
-    	    </td>
-        </tr>
-        <tr>
-            <td>
-                <span class="ui-icon ui-icon-triangle-1-e commit_tick"></span>
-    	        <a href="#" class="commit_action">Set your water heater to 120°F</a>
-    	        <ul class="commit_user_list hidden">
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        		</ul>
-    	    </td>
-    	    <td class="top center">
-    	        <b>1</b>
-    	    </td>
-    	    <td class="top center">
-    	        <b>2</b>
-    	    </td>
-        </tr>
-        <tr>
-            <td>
-                <span class="ui-icon ui-icon-triangle-1-e commit_tick"></span>
-    	        <a href="#" class="commit_action">Have a home energy audit and retrofit</a>
-    	        <ul class="commit_user_list hidden">
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        		</ul>
-    	    </td>
-    	    <td class="top center">
-    	        <b>1</b>
-    	    </td>
-    	    <td class="top center">
-    	        <b>2</b>
-    	    </td>
-        </tr>
-        <tr>
-            <td>
-                <span class="ui-icon ui-icon-triangle-1-e commit_tick"></span>
-    	        <a href="#" class="commit_action">Install a low-flow sink aerator</a>
-    	        <ul class="commit_user_list hidden">
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        			<li>List item <span class="commit_user_list_edit_link hidden">(<a href="#">edit</a>)</span></li>
-        		</ul>
-    	    </td>
-    	    <td class="top center">
-    	        <b>1</b>
-    	    </td>
-    	    <td class="top center">
-    	        <b>2</b>
-    	    </td>
-        </tr>
-    </table>
+    {% if actions %}
+        <table border="0" cellspacing="5" cellpadding="5">
+            <tr>
+                <th></th>
+                <th class="center smaller" style="width:70px;">
+                    <div class="commit_totals">{{ total_commitments }}</div>
+                    Committed
+                </th>
+                <th class="center smaller" style="width:70px;">
+                    <div class="commit_totals">{{ total_completes }}</div>
+                    Completed
+                </th>
+            </tr>
+            {% for action, tuple in actions.items %}
+                <tr>
+                    <td class="top">
+                        <span class="ui-icon ui-icon-triangle-1-e commit_tick"></span>
+            	        <a href="#" class="commit_action" id="commit_action__{{ action.id }}">{{ action.name }}</a>
+            	        <ul class="commit_list_ul commit_list_ul_{{ action.id }} hidden">
+            	            {% for commitment in tuple.0 %}
+                			    <li class="contributor__{{ commitment.contributor.id }}">{{ commitment.contributor }} 
+                			        <span class="commit_user_list_edit_link hidden">
+                			            (<a href="{% url commitments_card commitment.contributor.id %}">edit</a>)
+                			        </span>
+                			    </li>
+                			{% endfor %}
+                		</ul>
+            	    </td>
+            	    <td class="top center">
+            	        <b>{{ tuple.1 }}</b>
+            	        <ul class="plain_list commit_list_ul_{{ action.id }} hidden">
+            	            {% for commitment in tuple.0 %}
+        	                    <li class="contributor__{{ commitment.contributor.id }}">
+        	                        {% if commitment.answer == 'C' %}&#10003;{% else %}&nbsp;{% endif %}
+        	                    </li>
+            	            {% endfor %}
+                		</ul>
+            	    </td>
+            	    <td class="top center">
+            	        <b>{{ tuple.2 }}</b>
+            	        <ul class="plain_list commit_list_ul_{{ action.id }} hidden">
+            	            {% for commitment in tuple.0 %}
+        	                    <li class="contributor__{{ commitment.contributor.id }}">
+        	                        {% if commitment.answer == 'D' %}&#10003;{% else %}&nbsp;{% endif %}
+        	                    </li>
+            	            {% endfor %}
+                		</ul>
+            	    </td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% endif %}
 </div>
 <div class="box_two_bottom"></div>    
 {% endblock %}
