adding a facebook app id meta tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
         <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" /> 
         <link rel="alternate" type="application/atom+xml"  href="{% url blog_feed %}" title="Repower at Home Blog" />
         <link rel="shortcut icon" href="{% dated_static 'images/theme/favicon.ico' %}"/>
+        <meta property="fb:app_id" content="132085630163980"/>
         {% if debug %}
             <link rel="stylesheet" href="{% dated_static 'css/style.css' %}" type="text/css" media="screen" charset="utf-8"/>
         {% else %}
